# pkgar

./: .gitlab-ci.yml  Cargo.toml  README.md  test.sh
fuzz/: Cargo.toml
fuzz/fuzz_targets/: header.rs
pkgar/: Cargo.toml  README.md
pkgar-core/: Cargo.toml
pkgar-core/src/: entry.rs  error.rs  flags.rs  header.rs  lib.rs  package.rs  test.rs
pkgar-keys/: Cargo.toml  README.md
pkgar-keys/src/: error.rs  lib.rs  main.rs
pkgar-repo/: Cargo.toml
pkgar-repo/src/: lib.rs  package.rs
pkgar/fuzz/fuzz_targets/: header.rs
pkgar/src/: bin.rs  binprint.rs  builder.rs  error.rs  ext.rs  header.rs  lib.rs  main.rs  package.rs  transaction.rs
pkgar/src/package/: file.rs  head.rs  mod.rs
pkgar/tests/: builder.rs  transaction.rs
src/: bin.rs  entry.rs  error.rs  header.rs  key.rs  lib.rs  package.rs  packed.rs
