[package]
name = "pkgar"
version = "0.1.0"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pkgar"
required-features = ["clap", "rand", "std"]

[dependencies]
plain = "0.2.3"
sodalite = "0.3.0"

[dependencies.clap]
version = "2.33.0"
optional = true

[dependencies.rand]
version = "0.7.2"
optional = true

[dependencies.rand_core]
version = "0.5.1"
default-features = false

[dependencies.sha2]
version = "0.8.0"
default-features = false

[features]
default = ["clap", "rand", "std"]
std = []
