[package]
name = "pkgar"
version = "0.1.1"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pkgar"
required-features = ["rand", "std"]

[dependencies]
plain = "0.2.3"
sodalite = "0.3.0"
pico-args = "0.3.1"
ansi_term = "0.12.1"

[dependencies.rand]
version = "0.7.2"
optional = true

[dependencies.rand_core]
version = "0.5.1"
default-features = false

[dependencies.blake3]
version = "0.2.2"
default-features = false
features = ["rayon"]

[features]
default = ["rand", "std"]
std = []
