[package]
name = "pkgar"
version = "0.1.4"
description = "Redox Package Archive"
license = "MIT"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
repository = "https://gitlab.redox-os.org/redox-os/pkgar"
edition = "2018"

[[bin]]
name = "pkgar"
required-features = ["clap", "rand", "std"]

[dependencies]
plain = "0.2.3"
sodalite = "0.3.0"

[dependencies.clap]
version = "2.33.0"
optional = true

[dependencies.rand]
version = "0.7.2"
optional = true

[dependencies.rand_core]
version = "0.5.1"
default-features = false

[dependencies.blake3]
version = "0.2.1"
default-features = false
features = ["rayon"]

[features]
default = ["clap", "rand", "std"]
std = []
