[package]
name = "pkgar-core"
version = "0.1.14"
description = "Core Data Types for the Redox Package Archive"
license = "MIT"
authors = ["Jeremy Soller <jackpot51@gmail.com>", "Wesley Hershberger <mggmugginsmc@gmail.com>"]
repository = "https://gitlab.redox-os.org/redox-os/pkgar"
edition = "2018"

[dependencies]
bitflags = "1.2.1"
blake3 = { version = "0.3.6", default-features = false, features = ["rayon"] }
dryoc = "0.6"
plain = "0.2.3"
