[package]
name = "pkgar-core"
version = "0.1.19"
description = "Core Data Types for the Redox Package Archive"
license = "MIT"
authors = ["Jeremy Soller <jackpot51@gmail.com>", "Wesley Hershberger <mggmugginsmc@gmail.com>"]
repository = "https://gitlab.redox-os.org/redox-os/pkgar"
edition = "2021"

[dependencies]
bitflags = "2"
blake3 = { version = "1.8", default-features = false, features = ["rayon"] }
bytemuck = { version = "1", features = ["derive", "extern_crate_std"] }
dryoc = "0.6"
