[package]
name = "pkgar-keys"
version = "0.1.19"
description = "Key management tool/library for pkgar"
license = "MIT"
authors = ["Wesley Hershberger <mggmugginsmc@gmail.com>"]
repository = "https://gitlab.redox-os.org/redox-os/pkgar"
readme = "README.md"
edition = "2021"

[[bin]]
name = "pkgar-keys"
required-features = ["cli"]

[dependencies]
clap = { version = "2", optional = true }
dirs = "6"
hex = { version = "0.4.2", features = ["serde"] }
lazy_static = "1.4.0"
pkgar-core = { version = "0.1.19", path = "../pkgar-core" }
seckey = "0.11.2"
serde = { version = "1", default-features = false, features = ["derive"] }
termion = "4"
toml = "0.8"
anyhow = { version = "1", optional = true }
thiserror = "2"

[features]
default = []
cli = ["clap", "anyhow"]
