[package]
name = "pkgar-keys"
version.workspace = true
description = "Key management tool/library for pkgar"
license = "MIT"
authors = ["Wesley Hershberger <mggmugginsmc@gmail.com>"]
repository = "https://gitlab.redox-os.org/redox-os/pkgar"
readme = "README.md"
edition = "2021"

[[bin]]
name = "pkgar-keys"
required-features = ["cli"]

[dependencies]
clap = { version = "2", optional = true }
dirs = "6"
hex = { version = "0.4.2", features = ["serde"] }
lazy_static = "1.4.0"
pkgar-core = { path = "../pkgar-core", version = "0.2.0" }
seckey = "0.11.2"
serde = { version = "1", default-features = false, features = ["derive"] }
termion = "4"
toml = "0.8"
thiserror = "2"

[features]
default = []
cli = ["clap"]
