[package]
name = "pkgar-repo"
version = "0.1.19"
description = "Redox Package Repository"
license = "MIT"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
repository = "https://gitlab.redox-os.org/redox-os/pkgar"
edition = "2021"

[dependencies]
pkgar = { version = "0.1.19", path = "../pkgar" }
pkgar-core = { version = "0.1.19", path = "../pkgar-core" }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
