[package]
name = "pkgar-repo"
version.workspace = true
description = "Redox Package Repository"
license = "MIT"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
repository = "https://gitlab.redox-os.org/redox-os/pkgar"
edition = "2021"

[dependencies]
pkgar = { path = "../pkgar" }
pkgar-core = { path = "../pkgar-core" }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
