[package]
name = "pkgar-repo"
version.workspace = true
description = "Redox Package Repository"
license = "MIT"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
repository = "https://gitlab.redox-os.org/redox-os/pkgar"
edition = "2021"

[dependencies]
pkgar = { path = "../pkgar", version = "0.2.0" }
pkgar-core = { path = "../pkgar-core", version = "0.2.0" }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
