[package]
name = "pkgar"
version = "0.1.11"
description = "Redox Package Archive"
license = "MIT"
authors = ["Jeremy Soller <jackpot51@gmail.com>", "Wesley Hershberger <mggmugginsmc@gmail.com>"]
repository = "https://gitlab.redox-os.org/redox-os/pkgar"
edition = "2018"

[dependencies]
error-chain = "0.12"
plain = "0.2.3"
pkgar-core = { version = "0.1.11", path = "../pkgar-core" }
pkgar-keys = { version = "0.1.11", path = "../pkgar-keys" }
sodiumoxide = { version = "0.2.7", default_features = false }
#thiserror = "1.0.20"
user-error = "1.2.8"

[dependencies.clap]
version = "2.33.3"
optional = true

[dependencies.blake3]
version = "0.3.6"
default-features = false
features = ["rayon"]

[dev-dependencies]
copy_dir = "0.1.2"
tempfile = "3.1.0"

[features]
default = ["clap", "std"]
std = []
