[package]
name = "pkgar"
version = "0.1.18"
description = "Redox Package Archive"
license = "MIT"
authors = ["Jeremy Soller <jackpot51@gmail.com>", "Wesley Hershberger <mggmugginsmc@gmail.com>"]
repository = "https://gitlab.redox-os.org/redox-os/pkgar"
edition = "2021"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
pkgar-core = { version = "0.1.18", path = "../pkgar-core" }
pkgar-keys = { version = "0.1.18", path = "../pkgar-keys" }
anyhow = "1"
thiserror = "2"

[dependencies.clap]
version = "2.33.3"
optional = true

[dependencies.blake3]
version = "0.3.6"
default-features = false
features = ["rayon"]

[dev-dependencies]
copy_dir = "0.1.2"
tempfile = "3.1.0"

[features]
default = ["clap", "std"]
std = []
