[package]
name = "pkgar"
version = "0.1.19"
description = "Redox Package Archive"
license = "MIT"
authors = ["Jeremy Soller <jackpot51@gmail.com>", "Wesley Hershberger <mggmugginsmc@gmail.com>"]
repository = "https://gitlab.redox-os.org/redox-os/pkgar"
edition = "2021"

[[bin]]
name = "pkgar"
required-features = ["cli"]

[dependencies]
bytemuck = {version = "1", features = ["derive"]}
lzma-rust2 = "0.16.2"
pkgar-core = {version = "0.1.19", path = "../pkgar-core"}
pkgar-keys = {version = "0.1.19", path = "../pkgar-keys"}
thiserror = "2"

[dependencies.clap]
optional = true
version = "2"

[dependencies.blake3]
default-features = false
features = ["rayon"]
version = "1.8"

[dev-dependencies]
copy_dir = "0.1.2"
tempfile = "3.1.0"

[features]
default = ["std"]
cli = ["clap", "std"]
std = []
